--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --no-timeouts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mocha": "^10.0.0",
     "selenium-webdriver": "^4.4.0"
   },
   "devDependencies": {
