--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --no-timeouts",
-    "test-parallel": "mocha --no-timeouts --parallel"
+    "test": "mocha --no-timeouts --parallel --reporter mochawesome --require mochawesome/register"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "mocha": "^10.0.0",
+    "mochawesome": "^7.1.3",
     "selenium-webdriver": "^4.4.0"
   },
   "devDependencies": {
